// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Secret Details Edit SSH 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main container standard StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <h2
        class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold"
        level="2"
      >
        overview
      </h2>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-top-large StyledProps--padding-left-huge StyledProps--padding-right-huge"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-bottom-large"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex"
      >
        <div
          class="optionBtns"
        >
          <div
            class="item selected"
            data-name="visual-btn"
            role="button"
            tabindex="0"
          >
            visual
          </div>
          <div
            class="item"
            data-name="yaml-btn"
            role="button"
            tabindex="0"
          >
            yaml
          </div>
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-primary"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-edit StyledProps--main StyledProps--padding-right-xsmall"
            icon="edit"
          >
            <svg
              data-icon="edit"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                edit
              </desc>
              <path
                d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            editDetails
          </span>
        </button>
      </div>
    </div>
    <div
      class="Layout--horizontal StyledProps--main"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
        style="width: 60%;"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
        >
          <div
            class="StyledProps--font StyledProps--main detailsSection renderDetails"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
            >
              overview
            </p>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                name
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  abhi-ssh1
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                description
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  desc
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                identifier
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  abhissh1
                </span>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main detailsSection renderDetails"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
            >
              Credentials
            </p>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                secrets.labelType
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  <span>
                    secrets.typeSSH
                  </span>
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                authentication
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  SSH
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                credType
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  <span>
                    secrets.sshAuthFormFields.optionKey
                  </span>
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                username
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  abhinav
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                secrets.sshAuthFormFields.labelKeyReference
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  account.abhifile2
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                secrets.sshAuthFormFields.labelPassphrase
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  account.abhitest1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xxxlarge StyledProps--main StyledProps--border StyledProps--border-left StyledProps--padding-left-xxxlarge"
        style="width: 40%;"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main stats"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main nameValueItem"
          >
            <span
              class="name"
            >
              Connector created
            </span>
            <span
              class="value"
            >
              10/12/2020 02:26 pm
            </span>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main nameValueItem"
          >
            <span
              class="name"
            >
              Last updated
            </span>
            <span
              class="value"
            >
              10/12/2020 02:26 pm
            </span>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main"
          style="width: 300px;"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="bp3-form-group"
                  data-id="host-0"
                >
                  <label
                    class="bp3-label"
                    for="host"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="sshVerifyConnectionForm_host"
                    >
                      secrets.createSSHCredWizard.labelHostname
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="host"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall StyledProps--font-weight-bold"
                >
                  SECRETS.CREATESSHCREDWIZARD.HOSTNAMEINFO
                </p>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--margin-top-medium Button--with-current-color"
                  style="font-size: smaller;"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    secrets.createSSHCredWizard.btnVerifyConnection
                  </span>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Secret Details SSH Secret with Key Render 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main container standard StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <h2
        class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold"
        level="2"
      >
        overview
      </h2>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-top-large StyledProps--padding-left-huge StyledProps--padding-right-huge"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-bottom-large"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex"
      >
        <div
          class="optionBtns"
        >
          <div
            class="item selected"
            data-name="visual-btn"
            role="button"
            tabindex="0"
          >
            visual
          </div>
          <div
            class="item"
            data-name="yaml-btn"
            role="button"
            tabindex="0"
          >
            yaml
          </div>
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-primary"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-edit StyledProps--main StyledProps--padding-right-xsmall"
            icon="edit"
          >
            <svg
              data-icon="edit"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                edit
              </desc>
              <path
                d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            editDetails
          </span>
        </button>
      </div>
    </div>
    <div
      class="Layout--horizontal StyledProps--main"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
        style="width: 60%;"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
        >
          <div
            class="StyledProps--font StyledProps--main detailsSection renderDetails"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
            >
              overview
            </p>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                name
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  abhi-ssh1
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                description
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  desc
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                identifier
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  abhissh1
                </span>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main detailsSection renderDetails"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
            >
              Credentials
            </p>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                secrets.labelType
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  <span>
                    secrets.typeSSH
                  </span>
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                authentication
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  SSH
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                credType
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  <span>
                    secrets.sshAuthFormFields.optionKey
                  </span>
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                username
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  abhinav
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                secrets.sshAuthFormFields.labelKeyReference
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  account.abhifile2
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                secrets.sshAuthFormFields.labelPassphrase
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  account.abhitest1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xxxlarge StyledProps--main StyledProps--border StyledProps--border-left StyledProps--padding-left-xxxlarge"
        style="width: 40%;"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main stats"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main nameValueItem"
          >
            <span
              class="name"
            >
              Connector created
            </span>
            <span
              class="value"
            >
              10/12/2020 02:26 pm
            </span>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main nameValueItem"
          >
            <span
              class="name"
            >
              Last updated
            </span>
            <span
              class="value"
            >
              10/12/2020 02:26 pm
            </span>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main"
          style="width: 300px;"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="bp3-form-group"
                  data-id="host-0"
                >
                  <label
                    class="bp3-label"
                    for="host"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="sshVerifyConnectionForm_host"
                    >
                      secrets.createSSHCredWizard.labelHostname
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="host"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall StyledProps--font-weight-bold"
                >
                  SECRETS.CREATESSHCREDWIZARD.HOSTNAMEINFO
                </p>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--margin-top-medium Button--with-current-color"
                  style="font-size: smaller;"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    secrets.createSSHCredWizard.btnVerifyConnection
                  </span>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Secret Details Test Connection 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main container standard StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <h2
        class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold"
        level="2"
      >
        overview
      </h2>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-top-large StyledProps--padding-left-huge StyledProps--padding-right-huge"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-bottom-large"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex"
      >
        <div
          class="optionBtns"
        >
          <div
            class="item selected"
            data-name="visual-btn"
            role="button"
            tabindex="0"
          >
            visual
          </div>
          <div
            class="item"
            data-name="yaml-btn"
            role="button"
            tabindex="0"
          >
            yaml
          </div>
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-primary"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-edit StyledProps--main StyledProps--padding-right-xsmall"
            icon="edit"
          >
            <svg
              data-icon="edit"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                edit
              </desc>
              <path
                d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            editDetails
          </span>
        </button>
      </div>
    </div>
    <div
      class="Layout--horizontal StyledProps--main"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
        style="width: 60%;"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
        >
          <div
            class="StyledProps--font StyledProps--main detailsSection renderDetails"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
            >
              overview
            </p>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                name
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  abhi-ssh1
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                description
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  desc
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                identifier
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  abhissh1
                </span>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main detailsSection renderDetails"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
            >
              Credentials
            </p>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                secrets.labelType
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  <span>
                    secrets.typeSSH
                  </span>
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                authentication
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  SSH
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                credType
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  <span>
                    secrets.sshAuthFormFields.optionKey
                  </span>
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                username
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  abhinav
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                secrets.sshAuthFormFields.labelKeyReference
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  account.abhifile2
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                secrets.sshAuthFormFields.labelPassphrase
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  account.abhitest1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xxxlarge StyledProps--main StyledProps--border StyledProps--border-left StyledProps--padding-left-xxxlarge"
        style="width: 40%;"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main stats"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main nameValueItem"
          >
            <span
              class="name"
            >
              Connector created
            </span>
            <span
              class="value"
            >
              10/12/2020 02:26 pm
            </span>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main nameValueItem"
          >
            <span
              class="name"
            >
              Last updated
            </span>
            <span
              class="value"
            >
              10/12/2020 02:26 pm
            </span>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main"
          style="width: 300px;"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="bp3-form-group bp3-intent-danger"
                  data-id="host-0"
                >
                  <label
                    class="bp3-label"
                    for="host"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="sshVerifyConnectionForm_host"
                    >
                      secrets.createSSHCredWizard.labelHostname
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group bp3-intent-danger"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="host"
                        type="text"
                        value=""
                      />
                    </div>
                    <div
                      class="bp3-form-helper-text"
                    >
                      <div
                        class="FormError--errorDiv"
                      >
                        <span
                          class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
                          data-icon="circle-cross"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 13 13"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        <span
                          class="FormError--error"
                        >
                          host is a required field
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall StyledProps--font-weight-bold"
                >
                  SECRETS.CREATESSHCREDWIZARD.HOSTNAMEINFO
                </p>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--margin-top-medium Button--with-current-color"
                  style="font-size: smaller;"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    secrets.createSSHCredWizard.btnVerifyConnection
                  </span>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Secret Details Test Connection 2`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main container standard StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <h2
        class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold"
        level="2"
      >
        overview
      </h2>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-top-large StyledProps--padding-left-huge StyledProps--padding-right-huge"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-bottom-large"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex"
      >
        <div
          class="optionBtns"
        >
          <div
            class="item selected"
            data-name="visual-btn"
            role="button"
            tabindex="0"
          >
            visual
          </div>
          <div
            class="item"
            data-name="yaml-btn"
            role="button"
            tabindex="0"
          >
            yaml
          </div>
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-primary"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-edit StyledProps--main StyledProps--padding-right-xsmall"
            icon="edit"
          >
            <svg
              data-icon="edit"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                edit
              </desc>
              <path
                d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            editDetails
          </span>
        </button>
      </div>
    </div>
    <div
      class="Layout--horizontal StyledProps--main"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
        style="width: 60%;"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
        >
          <div
            class="StyledProps--font StyledProps--main detailsSection renderDetails"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
            >
              overview
            </p>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                name
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  abhi-ssh1
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                description
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  desc
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                identifier
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  abhissh1
                </span>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main detailsSection renderDetails"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
            >
              Credentials
            </p>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                secrets.labelType
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  <span>
                    secrets.typeSSH
                  </span>
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                authentication
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  SSH
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                credType
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  <span>
                    secrets.sshAuthFormFields.optionKey
                  </span>
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                username
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  abhinav
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                secrets.sshAuthFormFields.labelKeyReference
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  account.abhifile2
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                secrets.sshAuthFormFields.labelPassphrase
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  account.abhitest1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xxxlarge StyledProps--main StyledProps--border StyledProps--border-left StyledProps--padding-left-xxxlarge"
        style="width: 40%;"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main stats"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main nameValueItem"
          >
            <span
              class="name"
            >
              Connector created
            </span>
            <span
              class="value"
            >
              10/12/2020 02:26 pm
            </span>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main nameValueItem"
          >
            <span
              class="name"
            >
              Last updated
            </span>
            <span
              class="value"
            >
              10/12/2020 02:26 pm
            </span>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main"
          style="width: 300px;"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="bp3-form-group bp3-disabled"
                  data-id="host-0"
                >
                  <label
                    class="bp3-label"
                    for="host"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="sshVerifyConnectionForm_host"
                    >
                      secrets.createSSHCredWizard.labelHostname
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        disabled=""
                        name="host"
                        type="text"
                        value="http://localhost:8080"
                      />
                    </div>
                  </div>
                </div>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall StyledProps--font-weight-bold"
                >
                  SECRETS.CREATESSHCREDWIZARD.HOSTNAMEINFO
                </p>
              </div>
            </form>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--margin-top-xxlarge"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main StepsProgress--stepsProgress"
            id="steps-progress"
          >
            <div
              class="StepsProgress--progressBar"
            >
              <div
                class="bp3-progress-bar bp3-intent-danger bp3-no-stripes StepsProgress--progressHeight"
              >
                <div
                  class="bp3-progress-meter"
                  style="width: 100%;"
                />
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
            >
              <div
                class="StepsProgress--stepWrap"
              >
                <span
                  class="bp3-icon bp3-icon-tick StyledProps--main StyledProps--color StyledProps--color-green500 StyledProps--margin-right-small"
                  icon="tick"
                >
                  <svg
                    data-icon="tick"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      tick
                    </desc>
                    <path
                      d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <div
                  class="StyledProps--font StyledProps--main"
                  style="font-weight: bold;"
                >
                  secrets.createSSHCredWizard.verifyStepOne
                </div>
              </div>
              <div
                class="StepsProgress--stepWrap"
              >
                <span
                  class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500 StyledProps--margin-right-small"
                  icon="error"
                >
                  <svg
                    data-icon="error"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      error
                    </desc>
                    <path
                      d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <div
                  class="StyledProps--font StyledProps--main"
                  style=""
                >
                  secrets.createSSHCredWizard.verifyStepTwo
                </div>
              </div>
            </div>
          </div>
          <button
            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--margin-top-medium Button--with-current-color Button--without-shadow"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              secrets.createSSHCredWizard.verifyRetest
            </span>
          </button>
          <div
            class="StyledProps--font StyledProps--main StyledProps--margin-top-large"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Secret Details Test Connection 3`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main container standard StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <h2
        class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold"
        level="2"
      >
        overview
      </h2>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-top-large StyledProps--padding-left-huge StyledProps--padding-right-huge"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-bottom-large"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex"
      >
        <div
          class="optionBtns"
        >
          <div
            class="item selected"
            data-name="visual-btn"
            role="button"
            tabindex="0"
          >
            visual
          </div>
          <div
            class="item"
            data-name="yaml-btn"
            role="button"
            tabindex="0"
          >
            yaml
          </div>
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-primary"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-edit StyledProps--main StyledProps--padding-right-xsmall"
            icon="edit"
          >
            <svg
              data-icon="edit"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                edit
              </desc>
              <path
                d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            editDetails
          </span>
        </button>
      </div>
    </div>
    <div
      class="Layout--horizontal StyledProps--main"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
        style="width: 60%;"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
        >
          <div
            class="StyledProps--font StyledProps--main detailsSection renderDetails"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
            >
              overview
            </p>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                name
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  abhi-ssh1
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                description
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  desc
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                identifier
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  abhissh1
                </span>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main detailsSection renderDetails"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
            >
              Credentials
            </p>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                secrets.labelType
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  <span>
                    secrets.typeSSH
                  </span>
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                authentication
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  SSH
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                credType
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  <span>
                    secrets.sshAuthFormFields.optionKey
                  </span>
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                username
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  abhinav
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                secrets.sshAuthFormFields.labelKeyReference
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  account.abhifile2
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                secrets.sshAuthFormFields.labelPassphrase
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  account.abhitest1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xxxlarge StyledProps--main StyledProps--border StyledProps--border-left StyledProps--padding-left-xxxlarge"
        style="width: 40%;"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main stats"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main nameValueItem"
          >
            <span
              class="name"
            >
              Connector created
            </span>
            <span
              class="value"
            >
              10/12/2020 02:26 pm
            </span>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main nameValueItem"
          >
            <span
              class="name"
            >
              Last updated
            </span>
            <span
              class="value"
            >
              10/12/2020 02:26 pm
            </span>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main"
          style="width: 300px;"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="bp3-form-group"
                  data-id="host-0"
                >
                  <label
                    class="bp3-label"
                    for="host"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="sshVerifyConnectionForm_host"
                    >
                      secrets.createSSHCredWizard.labelHostname
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="host"
                        type="text"
                        value="http://localhost:8080"
                      />
                    </div>
                  </div>
                </div>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall StyledProps--font-weight-bold"
                >
                  SECRETS.CREATESSHCREDWIZARD.HOSTNAMEINFO
                </p>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--margin-top-medium Button--with-current-color"
                  style="font-size: smaller;"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    secrets.createSSHCredWizard.btnVerifyConnection
                  </span>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
